test/parse/expr/bad-getlocal-name-undefined.txt
;;; ERROR: 1
(module (func get_local $n))
(;; STDERR ;;;
out/test/parse/expr/bad-getlocal-name-undefined.txt:2:25: error: undefined local variable "$n"
(module (func get_local $n))
                        ^^
;;; STDERR ;;)
